--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<input class="header-form__input" type="search"
 								placeholder="Search Your Travel Destination">
 							<button class="header-form__submit" type="submit">Search</button>
-							<img class="header-form__icon" src="../images/icons/search.svg" alt="search image">
+							<img class="header-form__icon" src="images/icons/search.svg" alt="search image">
 						</form>
 					</div>
 					<div class="header-block__scroll">
