--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Admin">
 	<title>Start</title>
 
-	<link rel="icon" href="images/favicon.png">
+	<link rel="icon" href="images/icons/like.svg">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link
 		href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
@@ -40,7 +40,7 @@
 					<div class="header-block__scroll">
 						<div class="header-block__words">Scroll Down</div>
 						<a href="#choose" class="header-block__arrow"><img class="header-block__arrow-img"
-								src="../images/icons/angle-down.svg" alt=""></a>
+								src="images/icons/angle-down.svg" alt=""></a>
 					</div>
 				</div>
 				<div class="navigation">
@@ -73,8 +73,8 @@
 					<a href="#" class="choose__button">Explore Places</a>
 				</div>
 				<div class="col-6 choose__img">
-					<img class="choose__img-top" src="../images/choose-1.jpg" alt="">
-					<img class="choose__img-bottom" src="../images/choose-2.jpg" alt="">
+					<img class="choose__img-top" src="images/choose-1.jpg" alt="">
+					<img class="choose__img-bottom" src="images/choose-2.jpg" alt="">
 				</div>
 			</div>
 		</div>
@@ -86,29 +86,29 @@
 				<div class="dots-block__search col-4">
 					<a class="dots-block__link" href="#">
 						<div class="dots-block__icon">
-							<img src="../images/icons/search.svg" alt="">
+							<img src="images/icons/search.svg" alt="">
 						</div>
 						<div class="dots-block__caption">Search Places</div>
 					</a>
 				</div>
 
-				<img class="col-4 dots__img dots__img--left" src="../images/dots.png" alt="">
+				<img class="col-4 dots__img dots__img--left" src="images/dots.png" alt="">
 
 				<div class="dots-block__select col-4">
 					<a class="dots-block__link" href="#">
 						<div class="dots-block__icon">
-							<img src="../images/icons/check.svg" alt="">
+							<img src="images/icons/check.svg" alt="">
 						</div>
 						<div class="dots-block__caption">Select Places</div>
 					</a>
 				</div>
 
-				<img class="col-4 dots__img dots__img--right" src="../images/dots.png" alt="">
+				<img class="col-4 dots__img dots__img--right" src="images/dots.png" alt="">
 
 				<div class="dots-block__book col-4">
 					<a class="dots-block__link" href="#">
 						<div class="dots-block__icon">
-							<img src="../images/icons/like.svg" alt="">
+							<img src="images/icons/like.svg" alt="">
 						</div>
 						<div class="dots-block__caption">Book & Enjoy</div>
 					</a>
@@ -152,10 +152,10 @@
 			<div class="row tourist-block">
 				<h1 class="col-12 tourist-block__title">What Our Tourist Say</h1>
 				<div class="offset-1 tourist__content">
-					<img class="col-4 tourist-block__pict" src="../images/tourist.jpg" alt="">
+					<img class="col-4 tourist-block__pict" src="images/tourist.jpg" alt="">
 					<div class="tourist-block__text col-6">
 						<h2 class="tourist-block__caption">Sam Sumon</h2>
-						<img class="tourist-block__icon" src="../images/icons/quote.svg" alt="tourist photo">
+						<img class="tourist-block__icon" src="images/icons/quote.svg" alt="tourist photo">
 						<p class="tourist-block__desc">But I must explain to you how all this mistaken idea of
 							account to denouncinpleasure and praising pain But I must explain to you how all this
 							mistaken
@@ -177,15 +177,15 @@
 				<h1 class="footer__title"><a class="footer__title-link" href="#">Bhromaon</a></h1>
 				<h3 class="footer__subtitle">Safe Travel Anywhere</h3>
 				<div class="footer__social">
-					<a class="footer__link" href="#"><img src="../images/icons/facebook.svg" alt=""
+					<a class="footer__link" href="#"><img src="images/icons/facebook.svg" alt=""
 							class="footer__icon"></a>
-					<a class="footer__link" href="#"><img src="../images/icons/twitter.svg" alt=""
+					<a class="footer__link" href="#"><img src="images/icons/twitter.svg" alt=""
 							class="footer__icon"></a>
-					<a class="footer__link" href="#"><img src="../images/icons/linkedin.svg" alt=""
+					<a class="footer__link" href="#"><img src="images/icons/linkedin.svg" alt=""
 							class="footer__icon"></a>
-					<a class="footer__link" href="#"><img src="../images/icons/youtube.svg" alt=""
+					<a class="footer__link" href="#"><img src="images/icons/youtube.svg" alt=""
 							class="footer__icon"></a>
-					<a class="footer__link" href="#"><img src="../images/icons/pinterest.svg" alt=""
+					<a class="footer__link" href="#"><img src="images/icons/pinterest.svg" alt=""
 							class="footer__icon"></a>
 
 
